Исправление контроллера книг